# simple-auth

./: .env  Cargo.toml  README.md
src/: main.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/middleware/: mod.rs  rate_limiter.rs
src/models/: app_state.rs
src/utils/: db.rs  mod.rs
