[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.12"
mongodb = { version = "2.3", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-rt = "2"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9"
futures-util = "0.3"
dashmap = "5.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.128"
actix-extensible-rate-limit = "0.4"
redis = { version = "0.22", features = ["tokio-comp"] }
regex = "1.10.6"
log = "0.4.22"
